Agregar estilos y estructura inicial para el encabezado del sitio web

--- a/index.html
+++ b/index.html
@@ -8,9 +8,26 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
-    <title>Document</title>
+    <title>Restaurante con sass</title>
 </head>
 <body>
-    
+    <!--header-->
+    <header class="header">
+        <div class="brand">
+            <a href="#" class="logo">
+                <i class="fa-solid fa-utensils"></i>
+            </a>
+            <div>
+                <h1 class="main-name">Boti</h1>
+                <p class="sub-name">Restaurante</p>
+            </div>
+        </div>
+        <div class="header-banner">
+            <h1 class="main-heading">Bienvenidos</h1>
+            <h3 class="sub-heading">Sabemos lo que te gusta</h3>
+            <button class="main-btn">Reservos</button>
+        </div>
+    </header>
+    <!--fin del header-->
 </body>
 </html>
