Agregar sección de galería y pie de página con estilos en CSS y HTML

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <!--Fin acerca de-->
 
         <!--Seccion galeria-->
-        <section class="galerry">
+        <section class="gallery">
             <div class="cards-wrapper">
                 <div class="card">
                     <div class="card-overlay">
@@ -122,6 +122,44 @@
         </section>
         <!--Fin de galeria-->
     </main>
+
+
+    <!--Footer-->
+    <footer class="footer">
+        <div class="footer-header">
+            <a href="#" class="logo">
+                <i class="fa-solid fa-utensils"></i>
+            </a>
+            <div>
+                <h1 class="main-name">Boti</h1>
+                <p class="sub-name">Restaurante</p>
+            </div>
+        </div>
+        <div class="footer-social-media">
+            <ul class="social-media">
+                <li class="social-media-item">
+                    <a href="#" class="social-media-link"><i class="fa-brands fa-facebook"></i></a>
+                </li>
+                <li class="social-media-item">
+                    <a href="#" class="social-media-link"><i class="fa-brands fa-instagram"></i></a>
+                </li>
+                <li class="social-media-item">
+                    <a href="#" class="social-media-link"><i class="fa-brands fa-whatsapp"></i></a>
+                </li>
+                <li class="social-media-item">
+                    <a href="#" class="social-media-link"><i class="fa-brands fa-twitter"></i></a>
+                </li>
+            </ul>
+        </div>
+
+        <div class="footer-copyright">
+            <p class="footer-copyright-paragraph">
+                &copy; Copyright. 2025. Restaurante Boti. Todos los derechos reservados. 
+            </p>
+        </div>
+
+    </footer>
+    <!--Fin del footer-->
 
 </body>
 
